--- a/src/main/java/com/jdmg/proyectofinalprogra3josh/FormularioModificarVehiculo.form
+++ b/src/main/java/com/jdmg/proyectofinalprogra3josh/FormularioModificarVehiculo.form
@@ -39,7 +39,7 @@
     <Container class="javax.swing.JPanel" name="jPanel1">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="66" green="99" red="0" type="rgb"/>
+          <Color blue="66" green="ff" red="99" type="rgb"/>
         </Property>
       </Properties>
 
