--- a/src/main/java/com/jdmg/proyectofinalprogra3josh/ventanaPrincipal.form
+++ b/src/main/java/com/jdmg/proyectofinalprogra3josh/ventanaPrincipal.form
@@ -34,7 +34,13 @@
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="VerMultas">
               <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Segoe UI" size="12" style="1"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="VER MULTAS"/>
+                <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+                  <Color id="Hand Cursor"/>
+                </Property>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="VerMultasActionPerformed"/>
